final/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    CHAN
    CONSTANT
    CASE
    DEFER
    FALLTHROUGH
    SWITCH
    SELECT
    LMINUS
    AMPCAREQ
    GO
    DDD
    MAP
    INTERFACE

Grammar

Rule 0     S' -> start
Rule 1     start -> Source
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPAREN Type RPAREN
Rule 5     TypeName -> TYPEX
Rule 6     TypeName -> TTYPE IDENTIFIER
Rule 7     TypeLit -> ArrayType
Rule 8     TypeLit -> StructType
Rule 9     TypeLit -> PointerType
Rule 10    TypeLit -> FunctionType
Rule 11    TypeOpt -> Type
Rule 12    TypeOpt -> epsilon
Rule 13    ArrayType -> LBRACK ArrayLength RBRACK ElementType
Rule 14    ArrayType -> LBRACK RBRACK ElementType
Rule 15    ArrayLength -> Expression
Rule 16    ElementType -> Type
Rule 17    StructType -> STRUCT LBRACE FieldDeclRep RBRACE
Rule 18    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOL
Rule 19    FieldDeclRep -> epsilon
Rule 20    FieldDecl -> IdentifierList Type TagOpt
Rule 21    TagOpt -> Tag
Rule 22    TagOpt -> epsilon
Rule 23    Tag -> STRING
Rule 24    PointerType -> TIMES BaseType
Rule 25    BaseType -> Type
Rule 26    FunctionType -> FUNC Signature
Rule 27    Signature -> Parameters ResultOpt
Rule 28    ResultOpt -> Result
Rule 29    ResultOpt -> epsilon
Rule 30    Result -> Parameters
Rule 31    Result -> Type
Rule 32    Parameters -> LPAREN ParameterListOpt RPAREN
Rule 33    ParameterListOpt -> ParametersList
Rule 34    ParameterListOpt -> epsilon
Rule 35    ParametersList -> Type
Rule 36    ParametersList -> IdentifierList Type
Rule 37    ParametersList -> ParameterDeclCommaRep
Rule 38    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 39    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 40    ParameterDecl -> IdentifierList Type
Rule 41    ParameterDecl -> Type
Rule 42    Block -> CreateScope LBRACE StatementList RBRACE
Rule 43    CreateScope -> epsilon
Rule 44    StatementList -> StatementRep
Rule 45    StatementRep -> StatementRep Statement SEMICOL
Rule 46    StatementRep -> epsilon
Rule 47    Declaration -> ConstDecl
Rule 48    Declaration -> TypeDecl
Rule 49    Declaration -> VarDecl
Rule 50    TopLevelDecl -> Declaration
Rule 51    TopLevelDecl -> FunctionDecl
Rule 52    ConstDecl -> CONST ConstSpec
Rule 53    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 54    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOL
Rule 55    ConstSpecRep -> epsilon
Rule 56    ConstSpec -> IdentifierList TypeExprListOpt
Rule 57    TypeExprListOpt -> TypeOpt EQUAL ExpressionList
Rule 58    TypeExprListOpt -> epsilon
Rule 59    IdentifierList -> IDENTIFIER IdentifierRep
Rule 60    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 61    IdentifierRep -> epsilon
Rule 62    TypeDecl -> TYPE TypeSpec
Rule 63    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 64    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOL
Rule 65    TypeSpecRep -> epsilon
Rule 66    TypeSpec -> AliasDecl
Rule 67    TypeSpec -> TypeDef
Rule 68    AliasDecl -> IDENTIFIER EQUAL Type
Rule 69    TypeDef -> TTYPE IDENTIFIER Type
Rule 70    VarDecl -> VAR VarSpec
Rule 71    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 72    VarSpecRep -> VarSpecRep VarSpec SEMICOL
Rule 73    VarSpecRep -> epsilon
Rule 74    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 75    VarSpec -> IdentifierList EQUAL ExpressionList
Rule 76    ExpressionListOpt -> EQUAL ExpressionList
Rule 77    ExpressionListOpt -> epsilon
Rule 78    ShortVarDecl -> IDENTIFIER COLONEQ Expression
Rule 79    FunctionDecl -> FUNC FunctionName Function
Rule 80    FunctionDecl -> FUNC FunctionName Signature
Rule 81    FunctionName -> IDENTIFIER
Rule 82    Function -> Signature FunctionBody
Rule 83    FunctionBody -> Block
Rule 84    Operand -> Literal
Rule 85    Operand -> OperandName
Rule 86    Operand -> LPAREN Expression RPAREN
Rule 87    Literal -> BasicLit
Rule 88    BasicLit -> IntLiteral
Rule 89    BasicLit -> FloatLiteral
Rule 90    BasicLit -> ImgLiteral
Rule 91    BasicLit -> RuneLiteral
Rule 92    BasicLit -> StringLiteral
Rule 93    IntLiteral -> INTEGER
Rule 94    FloatLiteral -> FLOAT
Rule 95    ImgLiteral -> IMAGINARY
Rule 96    RuneLiteral -> RUNE
Rule 97    StringLiteral -> STRING
Rule 98    OperandName -> IDENTIFIER
Rule 99    Conversion -> Type LPAREN Expression RPAREN
Rule 100   PrimaryExpr -> Operand
Rule 101   PrimaryExpr -> Conversion
Rule 102   PrimaryExpr -> PrimaryExpr Selector
Rule 103   PrimaryExpr -> PrimaryExpr Index
Rule 104   PrimaryExpr -> PrimaryExpr Slice
Rule 105   PrimaryExpr -> PrimaryExpr Arguments
Rule 106   Selector -> DOT IDENTIFIER
Rule 107   Index -> LBRACK Expression RBRACK
Rule 108   Slice -> LBRACK ExpressionOpt COLON ExpressionOpt RBRACK
Rule 109   Arguments -> LPAREN ExpressionListTypeOpt RPAREN
Rule 110   ExpressionListTypeOpt -> ExpressionList
Rule 111   ExpressionListTypeOpt -> epsilon
Rule 112   ExpressionList -> Expression ExpressionRep
Rule 113   ExpressionRep -> ExpressionRep COMMA Expression
Rule 114   ExpressionRep -> epsilon
Rule 115   Expression -> UnaryExpr
Rule 116   Expression -> Expression OROR Expression
Rule 117   Expression -> Expression AMPAMP Expression
Rule 118   Expression -> Expression EQEQ Expression
Rule 119   Expression -> Expression NOTEQ Expression
Rule 120   Expression -> Expression LESS Expression
Rule 121   Expression -> Expression GREAT Expression
Rule 122   Expression -> Expression LEQ Expression
Rule 123   Expression -> Expression GEQ Expression
Rule 124   Expression -> Expression PLUS Expression
Rule 125   Expression -> Expression MINUS Expression
Rule 126   Expression -> Expression OR Expression
Rule 127   Expression -> Expression CARET Expression
Rule 128   Expression -> Expression TIMES Expression
Rule 129   Expression -> Expression DIVIDE Expression
Rule 130   Expression -> Expression MOD Expression
Rule 131   Expression -> Expression AMPERS Expression
Rule 132   Expression -> Expression LL Expression
Rule 133   Expression -> Expression GG Expression
Rule 134   Expression -> Expression AMPCAR Expression
Rule 135   ExpressionOpt -> Expression
Rule 136   ExpressionOpt -> epsilon
Rule 137   UnaryExpr -> PrimaryExpr
Rule 138   UnaryExpr -> UnaryOp UnaryExpr
Rule 139   UnaryOp -> PLUS
Rule 140   UnaryOp -> MINUS
Rule 141   UnaryOp -> TIMES
Rule 142   UnaryOp -> AMPERS
Rule 143   UnaryOp -> NOT
Rule 144   Statement -> Declaration
Rule 145   Statement -> LabeledStmt
Rule 146   Statement -> SimpleStmt
Rule 147   Statement -> ReturnStmt
Rule 148   Statement -> BreakStmt
Rule 149   Statement -> ContinueStmt
Rule 150   Statement -> GotoStmt
Rule 151   Statement -> Block
Rule 152   Statement -> IfStmt
Rule 153   Statement -> PrintStmt
Rule 154   Statement -> ForStmt
Rule 155   PrintStmt -> PRINT PD Expression
Rule 156   PrintStmt -> PRINT PS Expression
Rule 157   SimpleStmt -> epsilon
Rule 158   SimpleStmt -> ExpressionStmt
Rule 159   SimpleStmt -> IncDecStmt
Rule 160   SimpleStmt -> Assignment
Rule 161   SimpleStmt -> ShortVarDecl
Rule 162   LabeledStmt -> Label COLON Statement
Rule 163   Label -> IDENTIFIER
Rule 164   ExpressionStmt -> Expression
Rule 165   IncDecStmt -> PrimaryExpr PLUSPLUS
Rule 166   IncDecStmt -> PrimaryExpr MINUSMIN
Rule 167   Assignment -> ExpressionList assign_op ExpressionList
Rule 168   assign_op -> AssignOp
Rule 169   AssignOp -> PLUSEQ
Rule 170   AssignOp -> MINUSEQ
Rule 171   AssignOp -> TIMESEQ
Rule 172   AssignOp -> DIVIDEEQ
Rule 173   AssignOp -> MODEQ
Rule 174   AssignOp -> AMPEQ
Rule 175   AssignOp -> OREQ
Rule 176   AssignOp -> CAREQ
Rule 177   AssignOp -> LLEQ
Rule 178   AssignOp -> GGEQ
Rule 179   AssignOp -> EQUAL
Rule 180   IfStmt -> IF Expression Block ElseOpt
Rule 181   ElseOpt -> ELSE IfStmt
Rule 182   ElseOpt -> ELSE Block
Rule 183   ElseOpt -> epsilon
Rule 184   ForStmt -> CreateForScope FOR ConditionBlockOpt Block
Rule 185   CreateForScope -> epsilon
Rule 186   ConditionBlockOpt -> epsilon
Rule 187   ConditionBlockOpt -> Condition
Rule 188   ConditionBlockOpt -> ForClause
Rule 189   Condition -> Expression
Rule 190   ForClause -> SimpleStmt SEMICOL ConditionOpt SEMICOL SimpleStmt
Rule 191   ConditionOpt -> epsilon
Rule 192   ConditionOpt -> Condition
Rule 193   RangeClause -> ExpressionIdentListOpt RANGE Expression
Rule 194   ExpressionIdentListOpt -> epsilon
Rule 195   ExpressionIdentListOpt -> ExpressionIdentifier
Rule 196   ExpressionIdentifier -> ExpressionList EQUAL
Rule 197   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 198   ExpressionListPureOpt -> ExpressionList
Rule 199   ExpressionListPureOpt -> epsilon
Rule 200   BreakStmt -> BREAK LabelOpt
Rule 201   ContinueStmt -> CONTINUE LabelOpt
Rule 202   LabelOpt -> Label
Rule 203   LabelOpt -> epsilon
Rule 204   GotoStmt -> GOTO Label
Rule 205   Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
Rule 206   ImportDeclRep -> epsilon
Rule 207   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL
Rule 208   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL
Rule 209   TopLevelDeclRep -> epsilon
Rule 210   PackageClause -> PACKAGE PackageName
Rule 211   PackageName -> IDENTIFIER
Rule 212   ImportDecl -> IMPORT ImportSpec
Rule 213   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 214   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOL
Rule 215   ImportSpecRep -> epsilon
Rule 216   ImportSpec -> PackageNameDotOpt ImportPath
Rule 217   PackageNameDotOpt -> DOT
Rule 218   PackageNameDotOpt -> PackageName
Rule 219   PackageNameDotOpt -> epsilon
Rule 220   ImportPath -> STRING
Rule 221   epsilon -> <empty>

Terminals, with rules where they appear

AMPAMP               : 117
AMPCAR               : 134
AMPCAREQ             : 
AMPEQ                : 174
AMPERS               : 131 142
BREAK                : 200
CAREQ                : 176
CARET                : 127
CASE                 : 
CHAN                 : 
COLON                : 108 162
COLONEQ              : 78
COMMA                : 38 39 60 113
CONST                : 52 53
CONSTANT             : 
CONTINUE             : 201
DDD                  : 
DEFAULT              : 
DEFER                : 
DIVIDE               : 129
DIVIDEEQ             : 172
DOT                  : 106 217
ELSE                 : 181 182
EQEQ                 : 118
EQUAL                : 57 68 75 76 179 196
FALLTHROUGH          : 
FLOAT                : 94
FOR                  : 184
FUNC                 : 26 79 80
GEQ                  : 123
GG                   : 133
GGEQ                 : 178
GO                   : 
GOTO                 : 204
GREAT                : 121
IDENTIFIER           : 6 59 60 68 69 78 81 98 106 163 211
IF                   : 180
IMAGINARY            : 95
IMPORT               : 212 213
INTEGER              : 93
INTERFACE            : 
LBRACE               : 17 42
LBRACK               : 13 14 107 108
LEQ                  : 122
LESS                 : 120
LL                   : 132
LLEQ                 : 177
LMINUS               : 
LPAREN               : 4 32 53 63 71 86 99 109 213
MAP                  : 
MINUS                : 125 140
MINUSEQ              : 170
MINUSMIN             : 166
MOD                  : 130
MODEQ                : 173
NOT                  : 143
NOTEQ                : 119
OR                   : 126
OREQ                 : 175
OROR                 : 116
PACKAGE              : 210
PD                   : 155
PLUS                 : 124 139
PLUSEQ               : 169
PLUSPLUS             : 165
PRINT                : 155 156
PS                   : 156
RANGE                : 193
RBRACE               : 17 42
RBRACK               : 13 14 107 108
RETURN               : 197
RPAREN               : 4 32 53 63 71 86 99 109 213
RUNE                 : 96
SELECT               : 
SEMICOL              : 18 45 54 64 72 190 190 205 207 208 214
STRING               : 23 97 220
STRUCT               : 17
SWITCH               : 
TIMES                : 24 128 141
TIMESEQ              : 171
TTYPE                : 6 69
TYPE                 : 62 63
TYPEX                : 5
VAR                  : 70 71
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 66
Arguments            : 105
ArrayLength          : 13
ArrayType            : 7
AssignOp             : 168
Assignment           : 160
BaseType             : 24
BasicLit             : 87
Block                : 83 151 180 182 184
BreakStmt            : 148
Condition            : 187 192
ConditionBlockOpt    : 184
ConditionOpt         : 190
ConstDecl            : 47
ConstSpec            : 52 54
ConstSpecRep         : 53 54
ContinueStmt         : 149
Conversion           : 101
CreateForScope       : 184
CreateScope          : 42
Declaration          : 50 144
ElementType          : 13 14
ElseOpt              : 180
Expression           : 15 78 86 99 107 112 113 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 155 156 164 180 189 193
ExpressionIdentListOpt : 193
ExpressionIdentifier : 195
ExpressionList       : 57 75 76 110 167 167 196 198
ExpressionListOpt    : 74
ExpressionListPureOpt : 197
ExpressionListTypeOpt : 109
ExpressionOpt        : 108 108
ExpressionRep        : 112 113
ExpressionStmt       : 158
FieldDecl            : 18
FieldDeclRep         : 17 18
FloatLiteral         : 89
ForClause            : 188
ForStmt              : 154
Function             : 79
FunctionBody         : 82
FunctionDecl         : 51
FunctionName         : 79 80
FunctionType         : 10
GotoStmt             : 150
IdentifierList       : 20 36 40 56 74 75
IdentifierRep        : 59 60
IfStmt               : 152 181
ImgLiteral           : 90
ImportDecl           : 207
ImportDeclRep        : 205 207
ImportPath           : 216
ImportSpec           : 212 214
ImportSpecRep        : 213 214
IncDecStmt           : 159
Index                : 103
IntLiteral           : 88
Label                : 162 202 204
LabelOpt             : 200 201
LabeledStmt          : 145
Literal              : 84
Operand              : 100
OperandName          : 85
PackageClause        : 205
PackageName          : 210 218
PackageNameDotOpt    : 216
ParameterDecl        : 38 39 39
ParameterDeclCommaRep : 37 38
ParameterListOpt     : 32
Parameters           : 27 30
ParametersList       : 33
PointerType          : 9
PrimaryExpr          : 102 103 104 105 137 165 166
PrintStmt            : 153
RangeClause          : 
Result               : 28
ResultOpt            : 27
ReturnStmt           : 147
RuneLiteral          : 91
Selector             : 102
ShortVarDecl         : 161
Signature            : 26 80 82
SimpleStmt           : 146 190 190
Slice                : 104
Source               : 1
Statement            : 45 162
StatementList        : 42
StatementRep         : 44 45
StringLiteral        : 92
StructType           : 8
Tag                  : 21
TagOpt               : 20
TopLevelDecl         : 208
TopLevelDeclRep      : 205 208
Type                 : 4 11 16 20 25 31 35 36 40 41 68 69 74 99
TypeDecl             : 48
TypeDef              : 67
TypeExprListOpt      : 56
TypeLit              : 3
TypeName             : 2
TypeOpt              : 57
TypeSpec             : 62 64
TypeSpecRep          : 63 64
UnaryExpr            : 115 138
UnaryOp              : 138
VarDecl              : 49
VarSpec              : 70 72
VarSpecRep           : 71 72
assign_op            : 167
epsilon              : 12 19 22 29 34 43 46 55 58 61 65 73 77 111 114 136 157 183 185 186 191 194 199 203 206 209 215 219
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . Source
    (205) Source -> . PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
    (210) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    Source                         shift and go to state 3
    start                          shift and go to state 4

state 1

    (205) Source -> PackageClause . SEMICOL ImportDeclRep TopLevelDeclRep

    SEMICOL         shift and go to state 5


state 2

    (210) PackageClause -> PACKAGE . PackageName
    (211) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 3

    (1) start -> Source .

    $end            reduce using rule 1 (start -> Source .)


state 4

    (0) S' -> start .



state 5

    (205) Source -> PackageClause SEMICOL . ImportDeclRep TopLevelDeclRep
    (206) ImportDeclRep -> . epsilon
    (207) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOL
    (221) epsilon -> .

    IMPORT          reduce using rule 221 (epsilon -> .)
    FUNC            reduce using rule 221 (epsilon -> .)
    CONST           reduce using rule 221 (epsilon -> .)
    TYPE            reduce using rule 221 (epsilon -> .)
    VAR             reduce using rule 221 (epsilon -> .)
    $end            reduce using rule 221 (epsilon -> .)

    ImportDeclRep                  shift and go to state 9
    epsilon                        shift and go to state 8

state 6

    (210) PackageClause -> PACKAGE PackageName .

    SEMICOL         reduce using rule 210 (PackageClause -> PACKAGE PackageName .)


state 7

    (211) PackageName -> IDENTIFIER .

    STRING          reduce using rule 211 (PackageName -> IDENTIFIER .)
    SEMICOL         reduce using rule 211 (PackageName -> IDENTIFIER .)


state 8

    (206) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 206 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 206 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 206 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 206 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 206 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 206 (ImportDeclRep -> epsilon .)


state 9

    (205) Source -> PackageClause SEMICOL ImportDeclRep . TopLevelDeclRep
    (207) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOL
    (208) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOL
    (209) TopLevelDeclRep -> . epsilon
    (212) ImportDecl -> . IMPORT ImportSpec
    (213) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (221) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 221 (epsilon -> .)
    CONST           reduce using rule 221 (epsilon -> .)
    TYPE            reduce using rule 221 (epsilon -> .)
    VAR             reduce using rule 221 (epsilon -> .)
    $end            reduce using rule 221 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    epsilon                        shift and go to state 11
    ImportDecl                     shift and go to state 12

state 10

    (205) Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .
    (208) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOL
    (50) TopLevelDecl -> . Declaration
    (51) TopLevelDecl -> . FunctionDecl
    (47) Declaration -> . ConstDecl
    (48) Declaration -> . TypeDecl
    (49) Declaration -> . VarDecl
    (79) FunctionDecl -> . FUNC FunctionName Function
    (80) FunctionDecl -> . FUNC FunctionName Signature
    (52) ConstDecl -> . CONST ConstSpec
    (53) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (62) TypeDecl -> . TYPE TypeSpec
    (63) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (70) VarDecl -> . VAR VarSpec
    (71) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 205 (Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 14
    TYPE            shift and go to state 23
    VAR             shift and go to state 21

    TypeDecl                       shift and go to state 19
    VarDecl                        shift and go to state 22
    FunctionDecl                   shift and go to state 15
    TopLevelDecl                   shift and go to state 16
    Declaration                    shift and go to state 17
    ConstDecl                      shift and go to state 18

state 11

    (209) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 209 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 209 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 209 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 209 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 209 (TopLevelDeclRep -> epsilon .)


state 12

    (207) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOL

    SEMICOL         shift and go to state 24


state 13

    (212) ImportDecl -> IMPORT . ImportSpec
    (213) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (216) ImportSpec -> . PackageNameDotOpt ImportPath
    (217) PackageNameDotOpt -> . DOT
    (218) PackageNameDotOpt -> . PackageName
    (219) PackageNameDotOpt -> . epsilon
    (211) PackageName -> . IDENTIFIER
    (221) epsilon -> .

    LPAREN          shift and go to state 25
    DOT             shift and go to state 30
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 221 (epsilon -> .)

    ImportSpec                     shift and go to state 26
    epsilon                        shift and go to state 27
    PackageName                    shift and go to state 28
    PackageNameDotOpt              shift and go to state 29

state 14

    (52) ConstDecl -> CONST . ConstSpec
    (53) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (56) ConstSpec -> . IdentifierList TypeExprListOpt
    (59) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 32
    IDENTIFIER      shift and go to state 34

    ConstSpec                      shift and go to state 31
    IdentifierList                 shift and go to state 33

state 15

    (51) TopLevelDecl -> FunctionDecl .

    SEMICOL         reduce using rule 51 (TopLevelDecl -> FunctionDecl .)


state 16

    (208) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOL

    SEMICOL         shift and go to state 35


state 17

    (50) TopLevelDecl -> Declaration .

    SEMICOL         reduce using rule 50 (TopLevelDecl -> Declaration .)


state 18

    (47) Declaration -> ConstDecl .

    SEMICOL         reduce using rule 47 (Declaration -> ConstDecl .)


state 19

    (48) Declaration -> TypeDecl .

    SEMICOL         reduce using rule 48 (Declaration -> TypeDecl .)


state 20

    (79) FunctionDecl -> FUNC . FunctionName Function
    (80) FunctionDecl -> FUNC . FunctionName Signature
    (81) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 36

    FunctionName                   shift and go to state 37

state 21

    (70) VarDecl -> VAR . VarSpec
    (71) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (74) VarSpec -> . IdentifierList Type ExpressionListOpt
    (75) VarSpec -> . IdentifierList EQUAL ExpressionList
    (59) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 34

    VarSpec                        shift and go to state 38
    IdentifierList                 shift and go to state 40

state 22

    (49) Declaration -> VarDecl .

    SEMICOL         reduce using rule 49 (Declaration -> VarDecl .)


state 23

    (62) TypeDecl -> TYPE . TypeSpec
    (63) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (66) TypeSpec -> . AliasDecl
    (67) TypeSpec -> . TypeDef
    (68) AliasDecl -> . IDENTIFIER EQUAL Type
    (69) TypeDef -> . TTYPE IDENTIFIER Type

    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 46
    TTYPE           shift and go to state 42

    TypeSpec                       shift and go to state 45
    TypeDef                        shift and go to state 41
    AliasDecl                      shift and go to state 43

state 24

    (207) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .

    IMPORT          reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    FUNC            reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    CONST           reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    TYPE            reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    VAR             reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    $end            reduce using rule 207 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)


state 25

    (213) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (214) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOL
    (215) ImportSpecRep -> . epsilon
    (221) epsilon -> .

    RPAREN          reduce using rule 221 (epsilon -> .)
    DOT             reduce using rule 221 (epsilon -> .)
    IDENTIFIER      reduce using rule 221 (epsilon -> .)
    STRING          reduce using rule 221 (epsilon -> .)

    epsilon                        shift and go to state 47
    ImportSpecRep                  shift and go to state 48

state 26

    (212) ImportDecl -> IMPORT ImportSpec .

    SEMICOL         reduce using rule 212 (ImportDecl -> IMPORT ImportSpec .)


state 27

    (219) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 219 (PackageNameDotOpt -> epsilon .)


state 28

    (218) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 218 (PackageNameDotOpt -> PackageName .)


state 29

    (216) ImportSpec -> PackageNameDotOpt . ImportPath
    (220) ImportPath -> . STRING

    STRING          shift and go to state 50

    ImportPath                     shift and go to state 49

state 30

    (217) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 217 (PackageNameDotOpt -> DOT .)


state 31

    (52) ConstDecl -> CONST ConstSpec .

    SEMICOL         reduce using rule 52 (ConstDecl -> CONST ConstSpec .)


state 32

    (53) ConstDecl -> CONST LPAREN . ConstSpecRep RPAREN
    (54) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOL
    (55) ConstSpecRep -> . epsilon
    (221) epsilon -> .

    RPAREN          reduce using rule 221 (epsilon -> .)
    IDENTIFIER      reduce using rule 221 (epsilon -> .)

    ConstSpecRep                   shift and go to state 51
    epsilon                        shift and go to state 52

state 33

    (56) ConstSpec -> IdentifierList . TypeExprListOpt
    (57) TypeExprListOpt -> . TypeOpt EQUAL ExpressionList
    (58) TypeExprListOpt -> . epsilon
    (11) TypeOpt -> . Type
    (12) TypeOpt -> . epsilon
    (221) epsilon -> .
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPAREN Type RPAREN
    (5) TypeName -> . TYPEX
    (6) TypeName -> . TTYPE IDENTIFIER
    (7) TypeLit -> . ArrayType
    (8) TypeLit -> . StructType
    (9) TypeLit -> . PointerType
    (10) TypeLit -> . FunctionType
    (13) ArrayType -> . LBRACK ArrayLength RBRACK ElementType
    (14) ArrayType -> . LBRACK RBRACK ElementType
    (17) StructType -> . STRUCT LBRACE FieldDeclRep RBRACE
    (24) PointerType -> . TIMES BaseType
    (26) FunctionType -> . FUNC Signature

    SEMICOL         reduce using rule 221 (epsilon -> .)
    EQUAL           reduce using rule 221 (epsilon -> .)
    LPAREN          shift and go to state 62
    TYPEX           shift and go to state 58
    TTYPE           shift and go to state 63
    LBRACK          shift and go to state 66
    STRUCT          shift and go to state 65
    TIMES           shift and go to state 61
    FUNC            shift and go to state 53

    StructType                     shift and go to state 59
    TypeOpt                        shift and go to state 64
    ArrayType                      shift and go to state 54
    TypeName                       shift and go to state 57
    TypeLit                        shift and go to state 56
    TypeExprListOpt                shift and go to state 67
    epsilon                        shift and go to state 60
    PointerType                    shift and go to state 68
    FunctionType                   shift and go to state 69
    Type                           shift and go to state 55

state 34

    (59) IdentifierList -> IDENTIFIER . IdentifierRep
    (60) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (61) IdentifierRep -> . epsilon
    (221) epsilon -> .

    COMMA           reduce using rule 221 (epsilon -> .)
    LPAREN          reduce using rule 221 (epsilon -> .)
    TYPEX           reduce using rule 221 (epsilon -> .)
    TTYPE           reduce using rule 221 (epsilon -> .)
    LBRACK          reduce using rule 221 (epsilon -> .)
    STRUCT          reduce using rule 221 (epsilon -> .)
    TIMES           reduce using rule 221 (epsilon -> .)
    FUNC            reduce using rule 221 (epsilon -> .)
    EQUAL           reduce using rule 221 (epsilon -> .)
    SEMICOL         reduce using rule 221 (epsilon -> .)

    epsilon                        shift and go to state 70
    IdentifierRep                  shift and go to state 71

state 35

    (208) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .

    FUNC            reduce using rule 208 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    CONST           reduce using rule 208 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    TYPE            reduce using rule 208 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    VAR             reduce using rule 208 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    $end            reduce using rule 208 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)


state 36

    (81) FunctionName -> IDENTIFIER .

    LPAREN          reduce using rule 81 (FunctionName -> IDENTIFIER .)


state 37

    (79) FunctionDecl -> FUNC FunctionName . Function
    (80) FunctionDecl -> FUNC FunctionName . Signature
    (82) Function -> . Signature FunctionBody
    (27) Signature -> . Parameters ResultOpt
    (32) Parameters -> . LPAREN ParameterListOpt RPAREN

    LPAREN          shift and go to state 75

    Function                       shift and go to state 72
    Parameters                     shift and go to state 73
    Signature                      shift and go to state 74

state 38

    (70) VarDecl -> VAR VarSpec .

    SEMICOL         reduce using rule 70 (VarDecl -> VAR VarSpec .)


state 39

    (71) VarDecl -> VAR LPAREN . VarSpecRep RPAREN
    (72) VarSpecRep -> . VarSpecRep VarSpec SEMICOL
    (73) VarSpecRep -> . epsilon
    (221) epsilon -> .

    RPAREN          reduce using rule 221 (epsilon -> .)
    IDENTIFIER      reduce using rule 221 (epsilon -> .)
